# job-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  agents.md  claude_extraction_result.json  pyproject.toml  requirements-dev.txt  requirements.txt  run-tui.sh  scrape_with_firecrawl.py  sonar-project.properties  todo.md
.claude/: settings.local.json
.claude/commands/: StartOfTheDay.md  WrapUpForTheDay.md  sync-settings.md  updateClaude.md
.github/ISSUE_TEMPLATE/: profile-request.md  scoring-update.md
.github/workflows/: check-scoring-sync.yml  ci.yml  security.yml
.pre-commit-hooks/: check-scoring-sync.sh
ai-dev-tasks/: generate-tasks-parallel.md  process-task-list-parallel.md
chrome-extension/: manifest.json  popup.html  popup.js
commands/: StartOfTheDay.md  WrapUpForTheDay.md  updateClaude.md
config/: company_classifications.json  email-settings.json  filter-keywords.json  health-check-settings.json  llm-extraction-settings.json  location-settings.json  notification-settings.json  onboarding-email-template.md  parsers.json  robotics_priority_companies.json
data/: job_sources.csv  jobs.db.current-backup-20260201-220519  manual_career_pages.txt
data/sample_emails/: health_tech_reads.html  intact_manager.html  mechanical_engineer.html  titan_haptics.html  work_in_tech.html
docs/: QUALITY_SETUP_GUIDE.md  ROBOTICS_SOURCE_GUIDE.md  mario-ministry-of-testing-integration.md  mario-next-steps-qa-sources.md  mario-qa-job-sources.md  mario-setup-checklist.md  medtech_job_automation_prd_v2.md  system-diagram.md  unified-workflow-v3-ALL-PARSERS-FIXED.md  unified-workflow-v3-FINAL.md  unified-workflow-v3-PRODUCTION-READY.md  unified-workflow-v3-email-testing.md  unified-workflow-v3-testing.md  unified-workflow-v3.md  weekly-automation-workflow.md
docs/analysis/: issue-98-job-quality-analysis.md
docs/archive/: deprecated-files-cleanup-2025-11-30.md
docs/development/: ADDING_NEW_PROFILES.md  AGENT_BEST_PRACTICES.md  COMPLEXITY_GUIDELINES.md  DATABASE_TESTING_GUIDE.md  GITHUB_REQUIRED_CHECKS.md  IMPORT_DEPENDENCY_ANALYSIS.md  MULTI_PROFILE_GUIDE.md  SCORING_UPDATE_CHECKLIST.md  TESTING.md  TESTING_WORKFLOW.md  TEXTUAL_TUI_MIGRATION_PLAN.md  TUI_WORKFLOW.md  company-list-scraper-usage.md  flask-api-setup.md  workflow-diagram.md
docs/features/: MONETIZATION_STRATEGY.md  RECRUITER_WORKFLOW_TRANSFORMATION.md  prd-job-link-verification.md
docs/setup/: GOOGLE_FORM_TEMPLATE.md  PROFILE_INTAKE_QUESTIONNAIRE.md  README.md
profiles/: README.md  TEMPLATE.txt  adam.json  eli.json  wes.json
scripts/: add_companies_table.py  add_robotics_companies.py  backup_database.sh  catchup_missed_run.sh  cleanup_duplicate_jobs.py  cleanup_test_companies.py  compare_extraction_methods.py  deploy_to_vps.sh  detect_leaks.py  extract_sample_emails.py  generate_profile_json.py  migrate_robotics_companies.py  monitor_memory.py  onboard_profile.py  process_cached_firecrawl.py  process_feedback_emails.py  rescore_all_jobs.py  rescore_ministry_jobs.py  run_ministry_scraper.py  run_unified_scraper.sh  score_all_profiles.py  setup_backup_cron.sh  setup_unified_weekly_scraper.sh  setup_weekly_scraper_cron.sh  test_adams_email_issues.py  test_connections_fix.py  test_connections_integration.py  test_llm_failures_ui.py  test_ministry_scraper.py  upload_connections.py  view_llm_failures.py
src/: __init__.py  database.py  email_parser.py  enrich_existing_jobs.py  generate_jobs_html.py  imap_client.py  job_filter.py  models.py  notifier.py  processor.py  processor_master.py  processor_v2.py  rescore_all_jobs.py  score_all_profiles.py  send_all_unsent_to_wes.py  send_digest_copy.py  send_digest_to_wes.py  send_digest_to_wes_v2.py  send_profile_digest.py  tui.py  view_database.py
src/agents/: base_scorer.py  filter_handlers.py  job_filter_pipeline.py  job_scorer.py  profile_scorer.py
src/api/: __init__.py  app.py  company_service.py  llm_budget_service.py
src/enrichment/: __init__.py  career_page_finder.py  career_page_scraper.py  enrichment_pipeline.py  job_description_enricher.py
src/extractors/: email_company_extractor.py  extraction_comparator.py  llm_extractor.py
src/jobs/: company_scraper.py  hybrid_scraper.py  ministry_scraper.py  process_firecrawl_robotics.py  rls_scraper.py  scrape_companies_with_firecrawl.py  store_company_jobs.py  test_unified_workflow.py  testdevjobs_scraper.py  unified_scraper_v3.py  weekly_robotics_scraper.py  weekly_unified_scraper.py
src/migrations/: 001_multi_person_scoring.py  002_company_classifications.py  003_filter_tracking.py  004_auto_disable_companies.py  005_url_validation_tracking.py  006_profile_specific_digest_tracking.py
src/models/: __init__.py  company.py  pydantic_models.py
src/parsers/: __init__.py  artemis_parser.py  base_parser.py  builtin_parser.py  f6s_parser.py  feedback_parser.py  getro_parser.py  getro_wrapper.py  indeed_parser.py  jobbank_parser.py  jobbank_wrapper.py  linkedin_parser.py  newjobs_parser.py  newmatch_parser.py  ontario_jobs_parser.py  parser_registry.py  recruiter_parser.py  recruiter_wrapper.py  supra_parser.py  welcometothejungle_parser.py  (+3 more)
tests/: conftest.py
(+179 files in other folders)
